fix spacing

--- a/src/app/_components/ArtItem.module.css
+++ b/src/app/_components/ArtItem.module.css
@@ -65,7 +65,7 @@
 }
 
 .slide {
-	object-fit: scale-down;
+	object-fit: contain;
 }
 
 .aspect {
